--- a/src/scss/blocks/_category.scss
+++ b/src/scss/blocks/_category.scss
@@ -7,7 +7,7 @@
 .choose-caterory {
   background-size: contain;
   background-repeat: no-repeat;
-  background-position: 0 0;
+  background-position: center;
 
   @include media(large-desktop) {
     background-image: url('../../#{$img}choose-category.jpg');
