--- a/src/scss/blocks/_experience.scss
+++ b/src/scss/blocks/_experience.scss
@@ -6,7 +6,7 @@
 
 .experience {
   width: 100%;
-  background-position: 0 0;
+  background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
   padding-bottom: 50px;
