--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -62,6 +62,7 @@ header {
   flex-direction: column;
   margin: 20px 0;
   width: 100%;
+  z-index: 1;
 }
 @media screen and (min-width: 375px) {
   .navbar {
@@ -108,6 +109,7 @@ header {
   height: 50px;
   width: 200px;
   cursor: pointer;
+  z-index: 1;
   background-color: #FFFFFF;
   transition: 0.3s;
   margin: 0 auto;
@@ -204,7 +206,7 @@ header {
 
 .experience {
   width: 100%;
-  background-position: 0 0;
+  background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
   padding-bottom: 50px;
@@ -348,7 +350,7 @@ header {
 .choose-caterory {
   background-size: contain;
   background-repeat: no-repeat;
-  background-position: 0 0;
+  background-position: center;
 }
 @media screen and (min-width: 1220px) {
   .choose-caterory {
@@ -831,11 +833,11 @@ input {
   height: 1080px;
   width: 44vw;
   position: absolute;
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
   right: 0;
   top: 0;
-  z-index: -6;
+  z-index: 0;
 }
 @media screen and (min-width: 1220px) {
   .main-img {
