add model and routes

--- a/public/src/scss/blocks/_clients.scss
+++ b/public/src/scss/blocks/_clients.scss
@@ -28,7 +28,7 @@
 
       transition: .3s;
       cursor: pointer;
-      font-size: #{$font-M};
+      font-size: #{$font-M}px;
       border-radius: 50%;
       background-color: $purple;
 
