--- a/public/src/scss/blocks/_experience.scss
+++ b/public/src/scss/blocks/_experience.scss
@@ -55,7 +55,7 @@
     flex-wrap: wrap;
     flex-direction: row;
   }
-  @include media(mini-tablet) {
+  @include media(small-tablet) {
     flex-wrap: wrap;
     flex-direction: row;
   }
