--- a/public/src/css/styles.css
+++ b/public/src/css/styles.css
@@ -1,4 +1,4 @@
-.up-content, .box, .navbar, .content__right, .content, .email, .awesome-clients__slider, .up-content__arrows, .boxes, header, .made, .content__left__logo, .email__button, .feedback__color-back, .awesome-clients__info__name, .awesome-clients__slider__arrow, .video-block__blackout__circle__second, .video-block__blackout__circle, .video-block__blackout, .up-content__arrows__arrow, .box__category, .search__button, .search__input, .contact-us, .logo {
+.box-tour__info__price, .box-tour__info__seats, .box-tour__info__place, .box-tour__img, .up-content, .box, .navbar, .content__right, .content, .email, .awesome-clients__slider, .up-content__arrows, .boxes, header, .made, .content__left__logo, .email__button, .feedback__color-back, .awesome-clients__info__name, .awesome-clients__slider__arrow, .video-block__blackout__circle__second, .video-block__blackout__circle, .video-block__blackout, .up-content__arrows__arrow, .box__category, .search__button, .search__input, .contact-us, .logo {
   display: flex;
 }
 
@@ -11,7 +11,7 @@
   justify-content: space-between;
 }
 
-.up-content, .box, .navbar, .made, .content__left__logo, .email__button, .feedback__color-back, .awesome-clients__info__name, .awesome-clients__slider__arrow, .video-block__blackout__circle__second, .video-block__blackout__circle, .video-block__blackout, .up-content__arrows__arrow, .box__category, .search__button, .search__input, .contact-us, .logo, .content__right, .content, .email, .awesome-clients__slider, .up-content__arrows, .boxes, header {
+.box-tour__info__price, .box-tour__info__seats, .box-tour__info__place, .box-tour__img, .up-content, .box, .navbar, .made, .content__left__logo, .email__button, .feedback__color-back, .awesome-clients__info__name, .awesome-clients__slider__arrow, .video-block__blackout__circle__second, .video-block__blackout__circle, .video-block__blackout, .up-content__arrows__arrow, .box__category, .search__button, .search__input, .contact-us, .logo, .content__right, .content, .email, .awesome-clients__slider, .up-content__arrows, .boxes, header {
   display: flex;
 }
 
@@ -191,7 +191,7 @@ header {
   background-color: #FE6091;
 }
 
-.up-content, .box, .made, .content__left__logo, .email__button, .feedback__color-back, .awesome-clients__info__name, .awesome-clients__slider__arrow, .video-block__blackout__circle__second, .video-block__blackout__circle, .video-block__blackout, .up-content__arrows__arrow, .box__category, .content__right, .content, .email, .awesome-clients__slider, .up-content__arrows, .boxes, header, .logo, .navbar, .contact-us, .search__input, .search__button {
+.box-tour__info__price, .box-tour__info__seats, .box-tour__info__place, .box-tour__img, .up-content, .box, .made, .content__left__logo, .email__button, .feedback__color-back, .awesome-clients__info__name, .awesome-clients__slider__arrow, .video-block__blackout__circle__second, .video-block__blackout__circle, .video-block__blackout, .up-content__arrows__arrow, .box__category, .content__right, .content, .email, .awesome-clients__slider, .up-content__arrows, .boxes, header, .logo, .navbar, .contact-us, .search__input, .search__button {
   display: flex;
 }
 
@@ -262,7 +262,7 @@ header {
     flex-direction: row;
   }
 }
-@media screen and (min-width: ) {
+@media screen and (min-width: 600px) {
   .boxes {
     flex-wrap: wrap;
     flex-direction: row;
@@ -334,7 +334,7 @@ header {
   font-size: calc( 0 * 100vw + 14px );
 }
 
-.up-content, .made, .content__left__logo, .email__button, .feedback__color-back, .awesome-clients__info__name, .awesome-clients__slider__arrow, .video-block__blackout__circle__second, .video-block__blackout__circle, .video-block__blackout, .up-content__arrows__arrow, .content__right, .content, .email, .awesome-clients__slider, .up-content__arrows, header, .logo, .navbar, .contact-us, .search__input, .search__button, .boxes, .box, .box__category {
+.box-tour__info__price, .box-tour__info__seats, .box-tour__info__place, .box-tour__img, .up-content, .made, .content__left__logo, .email__button, .feedback__color-back, .awesome-clients__info__name, .awesome-clients__slider__arrow, .video-block__blackout__circle__second, .video-block__blackout__circle, .video-block__blackout, .up-content__arrows__arrow, .content__right, .content, .email, .awesome-clients__slider, .up-content__arrows, header, .logo, .navbar, .contact-us, .search__input, .search__button, .boxes, .box, .box__category {
   display: flex;
 }
 
@@ -409,7 +409,7 @@ header {
   color: #FFFFFF;
 }
 
-.made, .content__left__logo, .email__button, .feedback__color-back, .awesome-clients__info__name, .awesome-clients__slider__arrow, .video-block__blackout__circle__second, .video-block__blackout__circle, .video-block__blackout, .content__right, .content, .email, .awesome-clients__slider, header, .logo, .navbar, .contact-us, .search__input, .search__button, .boxes, .box, .box__category, .up-content, .up-content__arrows, .up-content__arrows__arrow {
+.box-tour__info__price, .box-tour__info__seats, .box-tour__info__place, .box-tour__img, .made, .content__left__logo, .email__button, .feedback__color-back, .awesome-clients__info__name, .awesome-clients__slider__arrow, .video-block__blackout__circle__second, .video-block__blackout__circle, .video-block__blackout, .content__right, .content, .email, .awesome-clients__slider, header, .logo, .navbar, .contact-us, .search__input, .search__button, .boxes, .box, .box__category, .up-content, .up-content__arrows, .up-content__arrows__arrow {
   display: flex;
 }
 
@@ -473,7 +473,7 @@ header {
   transform: rotate(360deg);
 }
 
-.made, .content__left__logo, .email__button, .feedback__color-back, .awesome-clients__info__name, .awesome-clients__slider__arrow, .content__right, .content, .email, .awesome-clients__slider, header, .logo, .navbar, .contact-us, .search__input, .search__button, .boxes, .box, .box__category, .up-content, .up-content__arrows, .up-content__arrows__arrow, .video-block__blackout, .video-block__blackout__circle, .video-block__blackout__circle__second {
+.box-tour__info__price, .box-tour__info__seats, .box-tour__info__place, .box-tour__img, .made, .content__left__logo, .email__button, .feedback__color-back, .awesome-clients__info__name, .awesome-clients__slider__arrow, .content__right, .content, .email, .awesome-clients__slider, header, .logo, .navbar, .contact-us, .search__input, .search__button, .boxes, .box, .box__category, .up-content, .up-content__arrows, .up-content__arrows__arrow, .video-block__blackout, .video-block__blackout__circle, .video-block__blackout__circle__second {
   display: flex;
 }
 
@@ -506,7 +506,7 @@ header {
   width: 40px;
   transition: 0.3s;
   cursor: pointer;
-  font-size: 19;
+  font-size: 19px;
   border-radius: 50%;
   background-color: #433A8B;
 }
@@ -586,7 +586,7 @@ header {
   background-image: url("../../img/clients/5.jpeg");
 }
 
-.made, .content__left__logo, .email__button, .feedback__color-back, .content__right, .content, .email, header, .logo, .navbar, .contact-us, .search__input, .search__button, .boxes, .box, .box__category, .up-content, .up-content__arrows, .up-content__arrows__arrow, .video-block__blackout, .video-block__blackout__circle, .video-block__blackout__circle__second, .awesome-clients__slider, .awesome-clients__slider__arrow, .awesome-clients__info__name {
+.box-tour__info__price, .box-tour__info__seats, .box-tour__info__place, .box-tour__img, .made, .content__left__logo, .email__button, .feedback__color-back, .content__right, .content, .email, header, .logo, .navbar, .contact-us, .search__input, .search__button, .boxes, .box, .box__category, .up-content, .up-content__arrows, .up-content__arrows__arrow, .video-block__blackout, .video-block__blackout__circle, .video-block__blackout__circle__second, .awesome-clients__slider, .awesome-clients__slider__arrow, .awesome-clients__info__name {
   display: flex;
 }
 
@@ -651,7 +651,7 @@ header {
   font-size: calc( 0.0225 * 100vw + 6.8px );
 }
 
-.made, .content__left__logo, .content__right, .content, header, .logo, .navbar, .contact-us, .search__input, .search__button, .boxes, .box, .box__category, .up-content, .up-content__arrows, .up-content__arrows__arrow, .video-block__blackout, .video-block__blackout__circle, .video-block__blackout__circle__second, .awesome-clients__slider, .awesome-clients__slider__arrow, .awesome-clients__info__name, .feedback__color-back, .email, .email__button {
+.box-tour__info__price, .box-tour__info__seats, .box-tour__info__place, .box-tour__img, .made, .content__left__logo, .content__right, .content, header, .logo, .navbar, .contact-us, .search__input, .search__button, .boxes, .box, .box__category, .up-content, .up-content__arrows, .up-content__arrows__arrow, .video-block__blackout, .video-block__blackout__circle, .video-block__blackout__circle__second, .awesome-clients__slider, .awesome-clients__slider__arrow, .awesome-clients__info__name, .feedback__color-back, .email, .email__button {
   display: flex;
 }
 
@@ -780,6 +780,81 @@ header {
   border-top: 1px solid #E3E3E3;
 }
 
+.box-tour__info__price, .box-tour__info__seats, .box-tour__info__place, .box-tour__img, header, .logo, .navbar, .contact-us, .search__input, .search__button, .boxes, .box, .box__category, .up-content, .up-content__arrows, .up-content__arrows__arrow, .video-block__blackout, .video-block__blackout__circle, .video-block__blackout__circle__second, .awesome-clients__slider, .awesome-clients__slider__arrow, .awesome-clients__info__name, .feedback__color-back, .email, .email__button, .content, .content__left__logo, .content__right, .made {
+  display: flex;
+}
+
+.logo, .contact-us, .search__input, .search__button, .box__category, .up-content__arrows__arrow, .video-block__blackout, .video-block__blackout__circle, .video-block__blackout__circle__second, .awesome-clients__slider__arrow, .awesome-clients__info__name, .feedback__color-back, .email__button, .content__left__logo, .made {
+  justify-content: center;
+  align-items: center;
+}
+
+header, .boxes, .up-content__arrows, .awesome-clients__slider, .email, .content, .content__right {
+  justify-content: space-between;
+}
+
+.box-tour {
+  margin: 0 auto;
+  font-size: 20px;
+  width: 300px;
+  background-color: #FFFFFF;
+}
+.box-tour__img {
+  height: 200px;
+  width: 100%;
+  justify-content: flex-end;
+  align-items: flex-end;
+  background-color: #433A8B;
+}
+.box-tour__info {
+  background-color: #FFFFFF;
+  padding: 20px;
+}
+.box-tour__info__title {
+  font-weight: 700;
+  color: #000000;
+  margin-bottom: 10px;
+  font-size: calc( 0 * 100vw + 19px );
+}
+.box-tour__info__desc {
+  font-weight: 500;
+  color: #999999;
+  margin-bottom: 10px;
+  font-size: calc( 0 * 100vw + 14px );
+}
+.box-tour__info__place {
+  margin-bottom: 10px;
+  font-weight: 600;
+  color: #000000;
+  font-size: calc( 0 * 100vw + 14.6153846154px );
+}
+.box-tour__info__seats {
+  font-weight: 600;
+  color: #000000;
+  margin-bottom: 10px;
+  font-size: calc( 0 * 100vw + 14.6153846154px );
+}
+.box-tour__info__price {
+  font-weight: 600;
+  color: #000000;
+  font-size: calc( 0 * 100vw + 14.6153846154px );
+}
+
+.bold {
+  padding-button: 5px;
+  font-weight: 700;
+  color: #433A8B;
+  font-size: calc( 0 * 100vw + 14.6153846154px );
+}
+
+.delete {
+  font-weight: 500;
+  color: #FFFFFF;
+  cursor: pointer;
+  margin: 20px;
+  font-size: calc( 0 * 100vw + 19px );
+}
+
 *, *:after, *:before {
   margin: 0;
   padding: 0;
@@ -881,7 +956,7 @@ input {
 }
 @media screen and (min-width: 1220px) {
   .circle {
-    background-image: url("../../../../img/circle.png");
+    background-image: url("../../img/circle.png");
   }
 }
 
@@ -897,7 +972,7 @@ input {
 }
 @media screen and (min-width: 1220px) {
   .line-back {
-    background-image: url(../../img/line-back.png);
+    background-image: url("../../img/line-back.png");
   }
 }
 
