--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,11 +4,12 @@
         Sigh up
     </div>
     <div class="lr-block__inputs">
-        <input type="text" name="name" class="lr-block__inputs__input" placeholder="Enter Name" id="name">
+        <input type="text" name="name" class="lr-block__inputs__input" placeholder="Enter Name" id="name"
+               minlength="4" maxlength="16" >
         <input type="email" name="email" class="lr-block__inputs__input" placeholder="Enter Email" id="email">
-        <input type="password" name="password" class="lr-block__inputs__input" placeholder="Enter Password" id="password">
-        <input type="password" name="password2" class="lr-block__inputs__input" placeholder="Confirm Password" id="password2">
+        <input type="password" name="password" class="lr-block__inputs__input" placeholder="Enter Password" id="password"
+               minlength="7" maxlength="16" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s).*$">
     </div>
-    <button type="submit" class="lr-block__button">Register</button>
+    <button type="submit" class="lr-block__button" id="btn">Register</button>
 </div>
 </form>
