--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,6 +3,7 @@
         <div class="lr-block__title">
             Sigh in
         </div>
+        <%- include('partials/messeges'); %>
         <div class="lr-block__inputs">
             <input type="email" name="email" class="lr-block__inputs__input"
                    placeholder="Enter Email" id="email">
