--- a/views/src/css/styles.css
+++ b/views/src/css/styles.css
@@ -1,8 +1,8 @@
-.tour-item, .lr-block__inputs, .lr-block, .up-content, .box, .navbar, .content__right, .content, .email, .awesome-clients__slider, .up-content__arrows, .boxes, header, .made, .content__left__logo, .email__button, .feedback__color-back, .awesome-clients__info__name, .awesome-clients__slider__arrow, .video-block__blackout__circle__second, .video-block__blackout__circle, .video-block__blackout, .up-content__arrows__arrow, .box__category, .search__button, .search__input, .contact-us, .logo {
+.tour-item, .lr-block__inputs, .lr-block, .up-content, .box, .navbar, .content__right, .content, .email, .awesome-clients__slider, .up-content__arrows, .boxes, header, .lr-block__success, .lr-block__error, .made, .content__left__logo, .email__button, .feedback__color-back, .awesome-clients__info__name, .awesome-clients__slider__arrow, .video-block__blackout__circle__second, .video-block__blackout__circle, .video-block__blackout, .up-content__arrows__arrow, .box__category, .search__button, .search__input, .contact-us, .logo {
   display: flex;
 }
 
-.made, .content__left__logo, .email__button, .feedback__color-back, .awesome-clients__info__name, .awesome-clients__slider__arrow, .video-block__blackout__circle__second, .video-block__blackout__circle, .video-block__blackout, .up-content__arrows__arrow, .box__category, .search__button, .search__input, .contact-us, .logo {
+.lr-block__success, .lr-block__error, .made, .content__left__logo, .email__button, .feedback__color-back, .awesome-clients__info__name, .awesome-clients__slider__arrow, .video-block__blackout__circle__second, .video-block__blackout__circle, .video-block__blackout, .up-content__arrows__arrow, .box__category, .search__button, .search__input, .contact-us, .logo {
   justify-content: center;
   align-items: center;
 }
@@ -11,11 +11,11 @@
   justify-content: space-between;
 }
 
-.tour-item, .lr-block__inputs, .lr-block, .up-content, .box, .navbar, .made, .content__left__logo, .email__button, .feedback__color-back, .awesome-clients__info__name, .awesome-clients__slider__arrow, .video-block__blackout__circle__second, .video-block__blackout__circle, .video-block__blackout, .up-content__arrows__arrow, .box__category, .search__button, .search__input, .contact-us, .logo, .content__right, .content, .email, .awesome-clients__slider, .up-content__arrows, .boxes, header {
+.tour-item, .lr-block__inputs, .lr-block, .up-content, .box, .navbar, .lr-block__success, .lr-block__error, .made, .content__left__logo, .email__button, .feedback__color-back, .awesome-clients__info__name, .awesome-clients__slider__arrow, .video-block__blackout__circle__second, .video-block__blackout__circle, .video-block__blackout, .up-content__arrows__arrow, .box__category, .search__button, .search__input, .contact-us, .logo, .content__right, .content, .email, .awesome-clients__slider, .up-content__arrows, .boxes, header {
   display: flex;
 }
 
-.made, .content__left__logo, .email__button, .feedback__color-back, .awesome-clients__info__name, .awesome-clients__slider__arrow, .video-block__blackout__circle__second, .video-block__blackout__circle, .video-block__blackout, .up-content__arrows__arrow, .box__category, .search__button, .search__input, .contact-us, .logo {
+.lr-block__success, .lr-block__error, .made, .content__left__logo, .email__button, .feedback__color-back, .awesome-clients__info__name, .awesome-clients__slider__arrow, .video-block__blackout__circle__second, .video-block__blackout__circle, .video-block__blackout, .up-content__arrows__arrow, .box__category, .search__button, .search__input, .contact-us, .logo {
   justify-content: center;
   align-items: center;
 }
@@ -191,11 +191,11 @@ header {
   background-color: #FE6091;
 }
 
-.tour-item, .lr-block__inputs, .lr-block, .up-content, .box, .made, .content__left__logo, .email__button, .feedback__color-back, .awesome-clients__info__name, .awesome-clients__slider__arrow, .video-block__blackout__circle__second, .video-block__blackout__circle, .video-block__blackout, .up-content__arrows__arrow, .box__category, .content__right, .content, .email, .awesome-clients__slider, .up-content__arrows, .boxes, header, .logo, .navbar, .contact-us, .search__input, .search__button {
+.tour-item, .lr-block__inputs, .lr-block, .up-content, .box, .lr-block__success, .lr-block__error, .made, .content__left__logo, .email__button, .feedback__color-back, .awesome-clients__info__name, .awesome-clients__slider__arrow, .video-block__blackout__circle__second, .video-block__blackout__circle, .video-block__blackout, .up-content__arrows__arrow, .box__category, .content__right, .content, .email, .awesome-clients__slider, .up-content__arrows, .boxes, header, .logo, .navbar, .contact-us, .search__input, .search__button {
   display: flex;
 }
 
-.made, .content__left__logo, .email__button, .feedback__color-back, .awesome-clients__info__name, .awesome-clients__slider__arrow, .video-block__blackout__circle__second, .video-block__blackout__circle, .video-block__blackout, .up-content__arrows__arrow, .box__category, .logo, .contact-us, .search__input, .search__button {
+.lr-block__success, .lr-block__error, .made, .content__left__logo, .email__button, .feedback__color-back, .awesome-clients__info__name, .awesome-clients__slider__arrow, .video-block__blackout__circle__second, .video-block__blackout__circle, .video-block__blackout, .up-content__arrows__arrow, .box__category, .logo, .contact-us, .search__input, .search__button {
   justify-content: center;
   align-items: center;
 }
@@ -334,11 +334,11 @@ header {
   font-size: calc( 0 * 100vw + 14px );
 }
 
-.tour-item, .lr-block__inputs, .lr-block, .up-content, .made, .content__left__logo, .email__button, .feedback__color-back, .awesome-clients__info__name, .awesome-clients__slider__arrow, .video-block__blackout__circle__second, .video-block__blackout__circle, .video-block__blackout, .up-content__arrows__arrow, .content__right, .content, .email, .awesome-clients__slider, .up-content__arrows, header, .logo, .navbar, .contact-us, .search__input, .search__button, .boxes, .box, .box__category {
+.tour-item, .lr-block__inputs, .lr-block, .up-content, .lr-block__success, .lr-block__error, .made, .content__left__logo, .email__button, .feedback__color-back, .awesome-clients__info__name, .awesome-clients__slider__arrow, .video-block__blackout__circle__second, .video-block__blackout__circle, .video-block__blackout, .up-content__arrows__arrow, .content__right, .content, .email, .awesome-clients__slider, .up-content__arrows, header, .logo, .navbar, .contact-us, .search__input, .search__button, .boxes, .box, .box__category {
   display: flex;
 }
 
-.made, .content__left__logo, .email__button, .feedback__color-back, .awesome-clients__info__name, .awesome-clients__slider__arrow, .video-block__blackout__circle__second, .video-block__blackout__circle, .video-block__blackout, .up-content__arrows__arrow, .logo, .contact-us, .search__input, .search__button, .box__category {
+.lr-block__success, .lr-block__error, .made, .content__left__logo, .email__button, .feedback__color-back, .awesome-clients__info__name, .awesome-clients__slider__arrow, .video-block__blackout__circle__second, .video-block__blackout__circle, .video-block__blackout, .up-content__arrows__arrow, .logo, .contact-us, .search__input, .search__button, .box__category {
   justify-content: center;
   align-items: center;
 }
@@ -409,11 +409,11 @@ header {
   color: #FFFFFF;
 }
 
-.tour-item, .lr-block__inputs, .lr-block, .made, .content__left__logo, .email__button, .feedback__color-back, .awesome-clients__info__name, .awesome-clients__slider__arrow, .video-block__blackout__circle__second, .video-block__blackout__circle, .video-block__blackout, .content__right, .content, .email, .awesome-clients__slider, header, .logo, .navbar, .contact-us, .search__input, .search__button, .boxes, .box, .box__category, .up-content, .up-content__arrows, .up-content__arrows__arrow {
+.tour-item, .lr-block__inputs, .lr-block, .lr-block__success, .lr-block__error, .made, .content__left__logo, .email__button, .feedback__color-back, .awesome-clients__info__name, .awesome-clients__slider__arrow, .video-block__blackout__circle__second, .video-block__blackout__circle, .video-block__blackout, .content__right, .content, .email, .awesome-clients__slider, header, .logo, .navbar, .contact-us, .search__input, .search__button, .boxes, .box, .box__category, .up-content, .up-content__arrows, .up-content__arrows__arrow {
   display: flex;
 }
 
-.made, .content__left__logo, .email__button, .feedback__color-back, .awesome-clients__info__name, .awesome-clients__slider__arrow, .video-block__blackout__circle__second, .video-block__blackout__circle, .video-block__blackout, .logo, .contact-us, .search__input, .search__button, .box__category, .up-content__arrows__arrow {
+.lr-block__success, .lr-block__error, .made, .content__left__logo, .email__button, .feedback__color-back, .awesome-clients__info__name, .awesome-clients__slider__arrow, .video-block__blackout__circle__second, .video-block__blackout__circle, .video-block__blackout, .logo, .contact-us, .search__input, .search__button, .box__category, .up-content__arrows__arrow {
   justify-content: center;
   align-items: center;
 }
@@ -473,11 +473,11 @@ header {
   transform: rotate(360deg);
 }
 
-.tour-item, .lr-block__inputs, .lr-block, .made, .content__left__logo, .email__button, .feedback__color-back, .awesome-clients__info__name, .awesome-clients__slider__arrow, .content__right, .content, .email, .awesome-clients__slider, header, .logo, .navbar, .contact-us, .search__input, .search__button, .boxes, .box, .box__category, .up-content, .up-content__arrows, .up-content__arrows__arrow, .video-block__blackout, .video-block__blackout__circle, .video-block__blackout__circle__second {
+.tour-item, .lr-block__inputs, .lr-block, .lr-block__success, .lr-block__error, .made, .content__left__logo, .email__button, .feedback__color-back, .awesome-clients__info__name, .awesome-clients__slider__arrow, .content__right, .content, .email, .awesome-clients__slider, header, .logo, .navbar, .contact-us, .search__input, .search__button, .boxes, .box, .box__category, .up-content, .up-content__arrows, .up-content__arrows__arrow, .video-block__blackout, .video-block__blackout__circle, .video-block__blackout__circle__second {
   display: flex;
 }
 
-.made, .content__left__logo, .email__button, .feedback__color-back, .awesome-clients__info__name, .awesome-clients__slider__arrow, .logo, .contact-us, .search__input, .search__button, .box__category, .up-content__arrows__arrow, .video-block__blackout, .video-block__blackout__circle, .video-block__blackout__circle__second {
+.lr-block__success, .lr-block__error, .made, .content__left__logo, .email__button, .feedback__color-back, .awesome-clients__info__name, .awesome-clients__slider__arrow, .logo, .contact-us, .search__input, .search__button, .box__category, .up-content__arrows__arrow, .video-block__blackout, .video-block__blackout__circle, .video-block__blackout__circle__second {
   justify-content: center;
   align-items: center;
 }
@@ -586,11 +586,11 @@ header {
   background-image: url("../../img/clients/5.jpeg");
 }
 
-.tour-item, .lr-block__inputs, .lr-block, .made, .content__left__logo, .email__button, .feedback__color-back, .content__right, .content, .email, header, .logo, .navbar, .contact-us, .search__input, .search__button, .boxes, .box, .box__category, .up-content, .up-content__arrows, .up-content__arrows__arrow, .video-block__blackout, .video-block__blackout__circle, .video-block__blackout__circle__second, .awesome-clients__slider, .awesome-clients__slider__arrow, .awesome-clients__info__name {
+.tour-item, .lr-block__inputs, .lr-block, .lr-block__success, .lr-block__error, .made, .content__left__logo, .email__button, .feedback__color-back, .content__right, .content, .email, header, .logo, .navbar, .contact-us, .search__input, .search__button, .boxes, .box, .box__category, .up-content, .up-content__arrows, .up-content__arrows__arrow, .video-block__blackout, .video-block__blackout__circle, .video-block__blackout__circle__second, .awesome-clients__slider, .awesome-clients__slider__arrow, .awesome-clients__info__name {
   display: flex;
 }
 
-.made, .content__left__logo, .email__button, .feedback__color-back, .logo, .contact-us, .search__input, .search__button, .box__category, .up-content__arrows__arrow, .video-block__blackout, .video-block__blackout__circle, .video-block__blackout__circle__second, .awesome-clients__slider__arrow, .awesome-clients__info__name {
+.lr-block__success, .lr-block__error, .made, .content__left__logo, .email__button, .feedback__color-back, .logo, .contact-us, .search__input, .search__button, .box__category, .up-content__arrows__arrow, .video-block__blackout, .video-block__blackout__circle, .video-block__blackout__circle__second, .awesome-clients__slider__arrow, .awesome-clients__info__name {
   justify-content: center;
   align-items: center;
 }
@@ -651,11 +651,11 @@ header {
   font-size: calc( 0.0225 * 100vw + 6.8px );
 }
 
-.tour-item, .lr-block__inputs, .lr-block, .made, .content__left__logo, .content__right, .content, header, .logo, .navbar, .contact-us, .search__input, .search__button, .boxes, .box, .box__category, .up-content, .up-content__arrows, .up-content__arrows__arrow, .video-block__blackout, .video-block__blackout__circle, .video-block__blackout__circle__second, .awesome-clients__slider, .awesome-clients__slider__arrow, .awesome-clients__info__name, .feedback__color-back, .email, .email__button {
+.tour-item, .lr-block__inputs, .lr-block, .lr-block__success, .lr-block__error, .made, .content__left__logo, .content__right, .content, header, .logo, .navbar, .contact-us, .search__input, .search__button, .boxes, .box, .box__category, .up-content, .up-content__arrows, .up-content__arrows__arrow, .video-block__blackout, .video-block__blackout__circle, .video-block__blackout__circle__second, .awesome-clients__slider, .awesome-clients__slider__arrow, .awesome-clients__info__name, .feedback__color-back, .email, .email__button {
   display: flex;
 }
 
-.made, .content__left__logo, .logo, .contact-us, .search__input, .search__button, .box__category, .up-content__arrows__arrow, .video-block__blackout, .video-block__blackout__circle, .video-block__blackout__circle__second, .awesome-clients__slider__arrow, .awesome-clients__info__name, .feedback__color-back, .email__button {
+.lr-block__success, .lr-block__error, .made, .content__left__logo, .logo, .contact-us, .search__input, .search__button, .box__category, .up-content__arrows__arrow, .video-block__blackout, .video-block__blackout__circle, .video-block__blackout__circle__second, .awesome-clients__slider__arrow, .awesome-clients__info__name, .feedback__color-back, .email__button {
   justify-content: center;
   align-items: center;
 }
@@ -780,11 +780,11 @@ header {
   border-top: 1px solid #E3E3E3;
 }
 
-.tour-item, .lr-block__inputs, .lr-block, header, .logo, .navbar, .contact-us, .search__input, .search__button, .boxes, .box, .box__category, .up-content, .up-content__arrows, .up-content__arrows__arrow, .video-block__blackout, .video-block__blackout__circle, .video-block__blackout__circle__second, .awesome-clients__slider, .awesome-clients__slider__arrow, .awesome-clients__info__name, .feedback__color-back, .email, .email__button, .content, .content__left__logo, .content__right, .made {
+.tour-item, .lr-block__inputs, .lr-block, .lr-block__success, .lr-block__error, header, .logo, .navbar, .contact-us, .search__input, .search__button, .boxes, .box, .box__category, .up-content, .up-content__arrows, .up-content__arrows__arrow, .video-block__blackout, .video-block__blackout__circle, .video-block__blackout__circle__second, .awesome-clients__slider, .awesome-clients__slider__arrow, .awesome-clients__info__name, .feedback__color-back, .email, .email__button, .content, .content__left__logo, .content__right, .made {
   display: flex;
 }
 
-.logo, .contact-us, .search__input, .search__button, .box__category, .up-content__arrows__arrow, .video-block__blackout, .video-block__blackout__circle, .video-block__blackout__circle__second, .awesome-clients__slider__arrow, .awesome-clients__info__name, .feedback__color-back, .email__button, .content__left__logo, .made {
+.lr-block__success, .lr-block__error, .logo, .contact-us, .search__input, .search__button, .box__category, .up-content__arrows__arrow, .video-block__blackout, .video-block__blackout__circle, .video-block__blackout__circle__second, .awesome-clients__slider__arrow, .awesome-clients__info__name, .feedback__color-back, .email__button, .content__left__logo, .made {
   justify-content: center;
   align-items: center;
 }
@@ -841,12 +841,30 @@ header, .boxes, .up-content__arrows, .awesome-clients__slider, .email, .content,
 .lr-block__button:hover {
   background-color: #FE6091;
 }
+.lr-block__error {
+  font-weight: 500;
+  color: #FFFFFF;
+  margin-bottom: 10px;
+  width: 100%;
+  background-color: #FE0000;
+  padding: 10px;
+  font-size: calc( 0 * 100vw + 14px );
+}
+.lr-block__success {
+  font-weight: 500;
+  color: #FFFFFF;
+  margin-bottom: 10px;
+  width: 100%;
+  background-color: #00cf00;
+  padding: 10px;
+  font-size: calc( 0 * 100vw + 14px );
+}
 
-.tour-item, header, .logo, .navbar, .contact-us, .search__input, .search__button, .boxes, .box, .box__category, .up-content, .up-content__arrows, .up-content__arrows__arrow, .video-block__blackout, .video-block__blackout__circle, .video-block__blackout__circle__second, .awesome-clients__slider, .awesome-clients__slider__arrow, .awesome-clients__info__name, .feedback__color-back, .email, .email__button, .content, .content__left__logo, .content__right, .made, .lr-block, .lr-block__inputs {
+.tour-item, header, .logo, .navbar, .contact-us, .search__input, .search__button, .boxes, .box, .box__category, .up-content, .up-content__arrows, .up-content__arrows__arrow, .video-block__blackout, .video-block__blackout__circle, .video-block__blackout__circle__second, .awesome-clients__slider, .awesome-clients__slider__arrow, .awesome-clients__info__name, .feedback__color-back, .email, .email__button, .content, .content__left__logo, .content__right, .made, .lr-block, .lr-block__inputs, .lr-block__error, .lr-block__success {
   display: flex;
 }
 
-.logo, .contact-us, .search__input, .search__button, .box__category, .up-content__arrows__arrow, .video-block__blackout, .video-block__blackout__circle, .video-block__blackout__circle__second, .awesome-clients__slider__arrow, .awesome-clients__info__name, .feedback__color-back, .email__button, .content__left__logo, .made {
+.logo, .contact-us, .search__input, .search__button, .box__category, .up-content__arrows__arrow, .video-block__blackout, .video-block__blackout__circle, .video-block__blackout__circle__second, .awesome-clients__slider__arrow, .awesome-clients__info__name, .feedback__color-back, .email__button, .content__left__logo, .made, .lr-block__error, .lr-block__success {
   justify-content: center;
   align-items: center;
 }
